--- a/Go_CRUD_API/DockerfileDB
+++ b/Go_CRUD_API/DockerfileDB
@@ -3,4 +3,4 @@ FROM postgres
 #ENV POSTGRES_PASSWORD 1234
 #ENV POSTGRES_DB postgres
 COPY dbsql.sql /docker-entrypoint-initdb.d/
-EXPOSE 5433
+#EXPOSE 5433
