--- a/Go_CRUD_API/docker-compose.yaml
+++ b/Go_CRUD_API/docker-compose.yaml
@@ -21,12 +21,13 @@ services:
       - "8085:8085"
     depends_on:
       - app-db
+      - redis
   redis:
-    image: redis:latest
+    image: redis
     volumes:
       - data:/data
     ports:
-      - 6379:6379
+      - 55000:6379
 volumes:
   dbdata:
   data:
